maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: ')' expected but 'var' found.
  var minimum=9999
  ^