maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
}

def marquageComplet():Boolean = //vérifie si on a marqué toutes les cases
{
  for (i <- 0 to getMondeLargeur()-1)
  {
    for (j <- 0 to getMondeHauteur()-1)
    {
      if (getIndication(i,j)==9999)
      {
        return false
      }
    }
  }
  return true
}

def repererSortie() //repère sortie, y met 0
{
  for (i <- 0 to getMondeLargeur()-1)
  {
    for (j <- 0 to getMondeHauteur()-1)
    {
      if (aBiscuit(i,j))
      {
        setIndication(i,j,0)
      }
    }
  }
}

def allerSortie()
{
  var indications:Array[Int]=(getIndication(getX()-1,getY()),getIndication(getX(),getY()+1,getIndication(getX()+1,getY()),getIndication(getX(),getY()-1)
  var minimum=9999
  for (i<- indications)
  {
    if (i<minimum)
    {
      minimum=i
    }
  }
  if ()
  
}